# libyaz0

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README  README.md
include/: yaz0.h
src/: byteswap.h  deflate.c  header.c  inflate.c  stream.c  stream.h  yaz0.c  yaz0.h  yaz0_util.h
tests/: deflate_test.cpp  header_test.cpp  inflate_test.cpp
